--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 
         </plugins>
     </build>
-
-
+    <distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://20.65.201.125:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://20.65.201.125:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
