--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,12 @@
                     <target>${java.version}</target>
                 </configuration>
             </plugin>
-
+            <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.9.0.2155</version> <!-- Specify the latest version -->
+        </plugin>
+        
         </plugins>
     </build>
     <distributionManagement>
