--- a/service-lb.yaml
+++ b/service-lb.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: webapp-lb-svc
+  namespace: flipkart-dev
 spec:
   selector:
     app: spring-boot-app
